--- a/css/index.css
+++ b/css/index.css
@@ -1,1 +1,258 @@
-/* Compile your LESS file! */
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+/* Set every element's box-sizing to border-box */
+* {
+  box-sizing: border-box;
+}
+html,
+body {
+  height: 100%;
+}
+html {
+  font-size: 62.5%;
+}
+body {
+  max-width: 1200px;
+  margin: auto;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.6rem;
+}
+h1 {
+  font-weight: bold;
+  font-size: 4rem;
+}
+h2 {
+  font-size: 3rem;
+}
+div.upperContent {
+  display: flex;
+  border-left: 2px solid black;
+  border-right: 2px black solid;
+}
+div.upperContent section.headerLeft {
+  border-bottom: 10px solid black;
+}
+div.upperContent section.headerLeft nav {
+  display: flex;
+  height: fit-content;
+  justify-content: space-evenly;
+  background-color: black;
+}
+div.upperContent section.headerLeft nav a {
+  text-decoration: none;
+  padding: 1%;
+  width: fit-content;
+  color: white;
+}
+div.upperContent section.headerLeft nav a:hover {
+  color: #cf4d01;
+}
+div.upperContent section.headerLeft section {
+  padding: 3%;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  border: 3px dotted black;
+  border-radius: 2rem;
+  margin: 10%;
+}
+div.upperContent section.headerLeft section h1 {
+  text-align: center;
+  margin-bottom: 1%;
+}
+div.upperContent section.headerLeft section p {
+  margin: 2%;
+}
+div.upperContent section.headerRight {
+  min-width: 25%;
+  border-left: 7px solid black;
+  border-bottom: 10px solid black;
+}
+div.upperContent section.headerRight img {
+  width: 100%;
+  position: relative;
+  top: 5px;
+  z-index: -1;
+}
+div.lowerContent {
+  display: flex;
+  border-left: 2px solid black;
+  border-right: 2px black solid;
+}
+div.lowerContent section.bodyLeft {
+  padding: 2%;
+}
+div.lowerContent section.bodyLeft span img {
+  float: left;
+  border: 1px solid black;
+  border-radius: 1rem;
+  margin: 2% 2% 2% 0%;
+  max-width: 40%;
+  height: auto;
+}
+div.lowerContent section.bodyRight {
+  min-width: 35%;
+  padding: 3% 0% 3% 3%;
+}
+div.lowerContent section.bodyRight div {
+  min-height: 100%;
+  padding: 7%;
+  border: 3px dotted black;
+  border-right: 0px;
+  border-bottom-left-radius: 2rem;
+  border-top-left-radius: 2rem;
+}
+div.lowerContent section.bodyRight div h2 {
+  text-align: center;
+  margin-bottom: 8%;
+}
+div.lowerContent section.bodyRight div ul {
+  list-style: square;
+}
+div.lowerContent section.bodyRight div ul li {
+  font-size: 2rem;
+  margin: 3%;
+}
+div.lowerContent section.bodyRight div ul li:hover {
+  color: #cf4d01;
+}
+div.copyrightStuff {
+  background-color: black;
+  color: white;
+}
+div.copyrightStuff section {
+  text-align: center;
+  padding: 2%;
+}
+div.copyrightStuff section span {
+  font-size: 1rem;
+}
+span.highlightMe:hover {
+  color: #cf4d01;
+}
